# SimpleChessClientServer

ChessClient/: ChessClient.py
ChessServer/: CMakeLists.txt  ChessClient.cpp  ChessClient.hpp  ChessServer.cpp  ChessServer.hpp  main.cpp
docs/: README.odt
